[package]
name = "mum-cli"
version = "0.5.1"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2021"
description = """
Core functionality to build a Mumble client.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"
readme = "../README.md"

[features]
default = ["notifications", "ogg"]

notifications = ["libnotify"]
ogg = ["lewton"]

[dependencies]
mumlib = { version = "0.5.1", path = "../mumlib" }

bincode = "1.3.3"
bytes = "1.1.0"
clap = { version = "4.0.2", features = ["derive"] }
clap_complete = "4.0.1"
chrono = { version = "0.4.19", features = [ "serde" ] }
colored = "2.0.0"
cpal = "0.14.0"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_ring_buffer = "0.11.0"
dasp_signal = "0.11.0"
futures-channel = "0.3.21"
futures-util = { version = "0.3.21", features = ["sink"]}
hound = "3.4.0"
log = "0.4.16"
mumble-protocol = "0.4.1"
native-tls = "0.2.10"
opus = "0.3.0"
serde = { version = "1.0.136", features = ["derive"] }
strum = "0.24.0"
strum_macros = "0.24.0"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "time", "fs"] }
tokio-native-tls = "0.3.0"
tokio-util = { version = "0.6.9", features = ["codec", "net"] }

libnotify = { version = "1.0.3", optional = true }
lewton = { version = "0.10.2", optional = true }
toml_edit = { version = "0.14.4", features = ["serde"] }

#compressor = "0.3"
#daemonize = "0.4"
