[package]
name = "mumctl"
version = "0.3.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2018"
description = """
CLI controller for mumd.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"

[dependencies]
mumlib = { version = "0.3", path = "../mumlib" }

clap = { version = "2.33", features = ["yaml"] }
colored = "2.0"
log = "0.4"
bincode = "1.3.2"

#cursive = "0.15"
