[package]
name = "mumctl"
version = "0.3.1"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2018"
description = """
CLI controller for mumd.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mumlib = { version = "0.3.1", path = "../mumlib" }

clap = { version = "2.33", features = ["yaml"] }
colored = "2.0"
log = "0.4"
ipc-channel = "0.14"

#cursive = "0.15"
