[package]
name = "mumctl"
version = "0.4.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2018"
description = """
CLI controller for mumd.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"
readme = "../README.md"

[dependencies]
mumlib = { version = "0.3", path = "../mumlib" }

bincode = "1"
colored = "2"
log = "0.4"
structopt = "0.3"

#cursive = "0.15"
