[package]
name = "mumd-socket"
version = "0.4.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2018"
description = """
Mumble client daemon.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"
readme = "../README.md"

[features]
default = ["notifications", "ogg"]

notifications = ["mumd-core/notifications"]
ogg = ["mumd-core/ogg"]

[dependencies]
mumlib = { version = "0.4", path = "../mumlib" }
mumd-core = { version = "0.4", path = "../mumd-core", default-features = false }

bytes = "1.0"
futures-util = { version = "0.3", features = ["sink"]}
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["codec"] }
bincode = "1.3.2"
