[package]
name = "mumd"
version = "0.3.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2018"
description = """
Mumble client daemon.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"

[features]
default = ["notifications"]

notifications = ["libnotify"]

[dependencies]
mumlib = { version = "0.3", path = "../mumlib" }

argparse = "0.2"
bytes = "0.5"
cpal = "0.13"
dasp_interpolate = { version = "0.11", features = ["linear"] }
dasp_signal = "0.11"
futures = "0.3"
futures-util = "0.3"
hound = "3.4"
ipc-channel = "0.14"
log = "0.4"
mumble-protocol = "0.3.1"
native-tls = "0.2"
openssl = { version = "0.10" }
opus = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["blocking", "macros", "rt-core", "sync", "tcp", "time"] }
tokio-tls = "0.3"
tokio-util = { version = "0.3", features = ["codec", "udp"] }

libnotify = { version = "1.0", optional = true }

#compressor = "0.3"
#daemonize = "0.4"
