[package]
name = "mumd"
version = "0.4.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2018"
description = """
Mumble client daemon.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"
readme = "../README.md"

[features]
default = ["notifications"]

notifications = ["libnotify"]

[dependencies]
mumlib = { version = "0.4", path = "../mumlib" }

cpal = "0.13"
bytes = "1.0"
dasp_interpolate = { version = "0.11", features = ["linear"] }
dasp_signal = "0.11"
dasp_frame = "0.11"
dasp_sample = "0.11"
dasp_ring_buffer = "0.11"
futures-util = { version = "0.3", features = ["sink"]}
futures-channel = "0.3"
hound = "3.4"
log = "0.4"
mumble-protocol = "0.4.1"
native-tls = "0.2"
openssl = { version = "0.10" }
opus = "0.2"
serde = { version = "1.0", features = ["derive"] }
strum = "0.20"
strum_macros = "0.20"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "net", "time", "fs"] }
tokio-stream = "0.1.0"
tokio-native-tls = "0.3"
tokio-util = { version = "0.6", features = ["codec", "net"] }
bincode = "1.3.2"

libnotify = { version = "1.0", optional = true }

#compressor = "0.3"
#daemonize = "0.4"
