[package]
name = "mumd"
version = "0.4.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2021"
description = """
Mumble client daemon.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"
readme = "../README.md"

[features]
default = ["notifications", "ogg"]

notifications = ["mum/notifications"]
ogg = ["mum/ogg"]

[dependencies]
mumlib = { version = "0.4", path = "../mumlib" }
mum = { version = "0.4", path = "../mum", default-features = false }

bytes = "1"
futures-util = { version = "0.3", features = ["sink"]}
log = "0.4"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["codec"] }
bincode = "1"
