[package]
name = "mumlib"
version = "0.3.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2018"
description = """
Exposed parts of mum.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"

[dependencies]
colored = "2"
dirs = "3"
fern = "0.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
