[package]
name = "mumlib"
version = "0.4.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>",
           "Eskil Queseth <eskilq@kth.se>"]
edition = "2021"
description = """
Exposed parts of mum.
"""
repository = "https://github.com/sornas/mum"
license = "MIT"
readme = "../README.md"

[dependencies]
colored = "2.0.0"
chrono = { version = "0.4.19", features = [ "serde" ] }
dirs = "4.0.0"
fern = "0.6.0"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.8"
